# Guition_ESP32-P4-Wifi-Ethernet

./: CMakeLists.txt  Guition_ESP32-P4-Wifi-Ethernet.ini  README.md  partitions.csv  platformio.ini
src/: CMakeLists.txt  lcd_init.c  main.cpp  wifi_fast_scan.h
